[package]
authors = ["Aili Nierengarten <aili.nierengarten@gmail.com>"]
description = "basic dictionary based tokenization"
documentation = "https://docs.rs/token-dict"
edition = "2024"
name = "token-dict"
license = "MIT"
version = "0.2.0"
repository = "https://github.com/8000thCube/token-dict"

[dependencies]
ptrie = "0.7.2"
